# datathings

./: .gitignore  README.md  data_flow_tracking.json  pyproject.toml
src/datathings/: dataflow.py
src/generic_data_functions/: __init__.py
