[project]
name = "datathings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "ruff>=0.8.0",
    "pydantic>=2.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
