[project]
name = "datathings"
version = "0.1.0"
description = "Small package for keeping track of useful data tools that I made."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "ruff>=0.8.0",
    "pydantic>=2.10.2",
    "graphviz>=0.20.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
